<resources>
    <string name="app_name">WatchlistApp</string>

    <string name="email_textbox_hint_text">Email</string>
    <string name="name_textbox_hint_text">Name</string>
    <string name="password_textbox_hint_text">Password</string>

    <string name="login_button_label">Login</string>
    <string name="logout_button_label">Logout</string>
    <string name="create_account_button_label">Create New Account</string>
    <string name="submit_button_label">Submit</string>
    <string name="cancel_button_label">Cancel</string>

    <string name="login_fragment_title">Login</string>
    <string name="register_fragment_title">Create New Account</string>
</resources>